--- a/fig/fig_CycleBrayton/tex/DepCompAdiab.tex
+++ b/fig/fig_CycleBrayton/tex/DepCompAdiab.tex
@@ -9,11 +9,11 @@
          lower left=PythonGreen!25!white,lower right=white] (2,-1) rectangle (3,0);
 	
 	\fill[left color=PythonRed,right color=PythonBlue](-3,-2) rectangle (3,-3) node[midway,text=white]{Plaque};
-	\draw[dotted,thick] (-2,-3.2) -- (-2,1.2) node[above,right]{$-\xi_{0}$};
-	\draw[dotted,thick] (2,-3.2) -- (2,1.2) node[above,right]{$+\xi_{0}$};
+	\draw[dotted,thick] (-2,-3.2) -- (-2,1.2) node[above, right]{$-\xi_1$};
+	\draw[dotted,thick] (2,-3.2) -- (2,1.2) node[anchor=west]{$+\xi_1$};
 		
 	\draw(2,0) circle (1);
 	\draw[dashed](-2,0) circle (.5);
 			
-	\draw[<->,PythonGreen] (0,-1.9) -- (0,-.1) node[below,right]{$\delta_{\kappa,\nu}$};
+	\draw[<->,PythonGreen] (0,-1.9) -- (0,-.1) node[anchor=west]{$\delta_{\kappa,\nu}$};
 \end{tikzpicture}
