--- a/fig/fig_CycleBrayton/tex/QPlaqueToFluide.tex
+++ b/fig/fig_CycleBrayton/tex/QPlaqueToFluide.tex
@@ -10,8 +10,8 @@
          lower left=PythonGreen!25!white,lower right=white] (2,-1) rectangle (3,0);
 
 	\fill[left color=PythonRed,right color=PythonBlue](-3,-2) rectangle (3,-3) node[midway,text=white]{Plaque};
-	\draw[dotted,thick] (-2,-3.2) -- (-2,1.2) node[above,right]{$-\xi_{0}$};
-	\draw[dotted,thick] (2,-3.2) -- (2,1.2) node[above,right]{$+\xi_{0}$};
+	\draw[dotted,thick] (-2,-3.2) -- (-2,1.2) node[above,right]{$-\xi_1$};
+	\draw[dotted,thick] (2,-3.2) -- (2,1.2) node[above,right]{$+\xi_1$};
 			
 	\draw(2,0) circle (1);
 			
