--- a/fig/fig_Cycle_Stirling/tex/DepAllerIsoV.tex
+++ b/fig/fig_Cycle_Stirling/tex/DepAllerIsoV.tex
@@ -1,17 +1,17 @@
 \begin{tikzpicture}[scale=.8]
 
-	\fill[left color=white, right color=PythonGreen!25!white] (-3,-2) rectangle (-2,0); 
-	\fill[PythonGreen!25!white] (-2,0) rectangle (2,-2); 
-	\fill[left color=PythonGreen!25!white, right color=white] (2,0) rectangle (3,-2); 
+	\fill[left color=white, right color=PythonGreen!25!white] (-3,-2) rectangle (-2,1); 
+	\fill[PythonGreen!25!white] (-2,1) rectangle (2,-2); 
+	\fill[left color=PythonGreen!25!white, right color=white] (2,1) rectangle (3,-2); 
 	\shade[upper left=white,upper right=white,
-         lower left=white,lower right=PythonGreen!25!white] (-3,0) rectangle (-2,2.5);
-	\fill[top color=white, bottom color=PythonGreen!25!white] (-2,2.5) rectangle (2,0);
+         lower left=white,lower right=PythonGreen!25!white] (-3,1) rectangle (-2,3.5);
+	\fill[top color=white, bottom color=PythonGreen!25!white] (-2,3.5) rectangle (2,1);
 	\shade[upper left=white,upper right=white,
-         lower left=PythonGreen!25!white,lower right=white] (2,0) rectangle (3,2.5);
+         lower left=PythonGreen!25!white,lower right=white] (2,1) rectangle (3,3.5);
 
 	\fill[left color=PythonRed,right color=PythonBlue](-3,-2) rectangle (3,-3) node[midway,text=white]{Plaque};
-	\draw[dotted,thick] (-2,-3.2) -- (-2,1.2) node[above,right]{$-\xi_{0}$};
-	\draw[dotted,thick] (2,-3.2) -- (2,1.2) node[above,right]{$+\xi_{0}$};
+	\draw[dotted,thick] (-2,-3.2) -- (-2,1.2) node[above,right]{$-\xi_1$};
+	\draw[dotted,thick] (2,-3.2) -- (2,1.2) node[above,right]{$+\xi_1$};
 		
 	\draw(-2,0) circle (.5);
 	\draw[dashed](2,0) circle (.5);
