--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -301,7 +301,7 @@ Pour l'étude de l'influence de la gravité sur la distribution de température 
 
 Les orientations choisies au moyen des palans sont décrites par deux angles $\psi_v$ et $\psi_h$. Le premier désigne l'angle entre l'axe horizontal et l'axe de symétrie du réfrigérateur, tandis que le second, la rotation autour de cet axe de symétrie. Les orientations utilisées dans les différentes parties de ce manuscript sont présentées sur les figures~\ref{fig:OrientationCore_H} et \ref{fig:OrientationCore_V}. Cette figure, dans laquelle la gravité est toujours dirigée vers le bas de la page, présente également les emplacements et les numéros d'identification des thermocouples utilisés.\medskip
 
-\begin{figure}[!tb]
+\begin{figure}[!htp]
     \centering
 	\begin{subfigure}[c]{.4\textwidth}
 		\centering
@@ -340,7 +340,7 @@ Les orientations choisies au moyen des palans sont décrites par deux angles $\p
 	 \label{fig:OrientationCore_H}
 \end{figure}
 
-\begin{figure}[!tb]
+\begin{figure}[!htp]
 	\centering	
 	\begin{subfigure}[c]{.4\textwidth}
 		\centering
