--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -35,6 +35,8 @@
         $R_{\sf reg}$ & \unit{\milli\meter} & Rayon du régénérateur, $R_{\sf reg}=\qty{74}{\milli\meter}$ \\
         $\Rayleigh$ & --- & Nombre de Rayleigh \\
         $r_h$ & \unit{\meter} & Rayon hydraulique des pores du régénérateur \\
+        $t$ & \unit{\second} & Variable temporelle \\
+        $t_1$ & \unit{\second} & Période du signal $t_1 = 1/f_1$ \\
         $T_0$ & \unit{\kelvin} & Température moyenne locale du gaz dans le noyau \\
         $T_\infty$ & \unit{\kelvin} & Température ambiante hors de la machine \\
         $u$ & \unit{\cubic\meter\per\second} & Débit acoustique \\
@@ -63,7 +65,6 @@
         $\mu$ & \unit{\pascal\second} & Viscosité dynamique \\
         $\nu$ & \unit{\square\meter\per\second} & Viscosité cinématique \\
         $\kappa$ & \unit{\square\meter\per\second} & Diffusivité thermique \\
-        $\tau_1$ & \unit{\second} & Période du signal $\tau_1 = 1/f_1$ \\
         $\xi_1$ & \unit{\meter} & Déplacement particulaire dans le régénérateur \\
         $\xi_{SA1}$ & \unit{\meter} & Déplacement du piston de la source acoustique principale \\
         $\xi_{SA2}$ & \unit{\meter} & Déplacement du piston de la source acoustique secondaire \\
