--- a/tex/RecapCondExpe.tex
+++ b/tex/RecapCondExpe.tex
@@ -1,6 +1,6 @@
 \chapter{Récapitulatif des conditions expérimentales}
 \section{\'Etude sur la convection naturelle}
-Les conditions expérimentales du chapitre~\ref{chap:EtudeExpe_ConvNat} sont résumées de façon détaillée dans le tableau~\ref{tab:RecapCondExpe}. Les déplacements des sources $\xi_1$ et $\xi_2$, la pression acoustique dans la cavité thermoacoustique $p$, les impédances acoustiques vues par les sources $Z_{ac}^{(1)}$ et $Z_{ac}^{(2)}$ y sont rapportées.
+Les conditions expérimentales du chapitre~\ref{chap:EtudeExpe} sont résumées de façon détaillée dans le tableau~\ref{tab:RecapCondExpe}. Les déplacements des sources $\xi_1$ et $\xi_2$, la pression acoustique dans la cavité thermoacoustique $p$, les impédances acoustiques vues par les sources $Z_{ac}^{(1)}$ et $Z_{ac}^{(2)}$ y sont rapportées.
 
 Les résultats de ces expériences tels que les températures atteintes du côté froid $T_f$, du côté ambiant $T_a$ ou devant la source acoustique principale $T_{sa1}$, les puissances thermiques échangées côté ambiant $Q_a$ et froid $Q_f$, et le coefficient de performance $\COP$ sont notés dans le tableau~\ref{tab:RecapResultExpe}. Pour simplifier les résultats, les températures froide et ambiante y dénotent les valeurs moyennées sur les sections correspondantes, c'est-à-dire respectivement les thermocouples \numlist{4;5;6}, et \numlist{10;11;12}. Le coefficient de performances est rapporté à celui de Carnot, car dans le protocole d'étude des performances les charges thermiques sont fixées et les températures libres de varier.
 
