ajout tacot post processing chapt 2

--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,4 +1,24 @@
 
+@article{g_correlations_2022,
+	title = {Correlations and Numerical Modeling of Stacked Woven Wire-Mesh Porous Media for Heat Exchange Applications},
+	volume = {15},
+	rights = {https://creativecommons.org/licenses/by/4.0/},
+	issn = {1996-1073},
+	url = {https://www.mdpi.com/1996-1073/15/7/2371},
+	doi = {10.3390/en15072371},
+	abstract = {Metal foams have gained attention due to their heat transfer augmenting capabilities. In the literature, correlations describing relations among their morphological characteristics have successfully been established and well discussed. However, collective expressions that categorize stacked wire mesh based on their morphology and thermo-hydraulic expressions required for numerical modeling are less explored in the literature. In the present study, cross relations among the morphological characteristics of stacked wire-mesh were arrived at based on mesh-size, wire diameter and stacking type, which are essential for describing the medium and determining key input parameters required for numerical modeling. Furthermore, correlation for speciﬁc surface area, a vital parameter that plays a major role in interstitial heat transfer, is provided. With the arrived correlations, properties of stacked wire-mesh samples of orderly varied mesh-size and porosity are obtained for various stacking scenarios, and corresponding thermo-hydraulic parameters appearing in the governing equations are evaluated. A vertical channel housing the categorized wire-mesh porous media is numerically modeled to analyze thermal and ﬂow characteristics of such a medium. The proposed correlations can be used in conﬁdence to evaluate thermo-hydraulic parameters appearing in governing equations in order to numerically model various samples of stacked wire-mesh types of porous media in a variety of heat transfer applications.},
+	pages = {2371},
+	number = {7},
+	journaltitle = {Energies},
+	shortjournal = {Energies},
+	author = {G, Trilok and Srinivas, Kurma Eshwar Sai and Harikrishnan, Devika and N, Gnanasekaran and Mobedi, Moghtada},
+	urldate = {2025-02-17},
+	date = {2022-03-24},
+	langid = {english},
+	keywords = {Conduction, woven meshgrids},
+	file = {G et al. - 2022 - Correlations and Numerical Modeling of Stacked Wov.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\I3MXJQ8V\\G et al. - 2022 - Correlations and Numerical Modeling of Stacked Wov.pdf:application/pdf},
+}
+
 @article{baltean_gravity_2025,
 	title = {Gravity effects in a compact thermoacoustic cavity},
 	volume = {157},
