--- a/tex/Abstract.tex
+++ b/tex/Abstract.tex
@@ -4,15 +4,15 @@
 \vfill
 
 {\Large Résumé :}\medskip
+\begin{multicols}{2}
+La thermoacoustique est un domaine interdisciplinaire à l'interface entre les transferts thermiques, la mécanique des fluides et l'acoustique, et concerne l'étude des interactions entre les ondes acoustiques et les variations de température. Dans cette thèse portant sur une pompe à chaleur thermoacoustique, l'accent est mis sur l'impact de la convection naturelle sur la distribution de température complexe au sein de son noyau.
 
-La thermoacoustique est un domaine interdisciplinaire à l'interface entre les transferts thermiques, la mécanique des fluides et l'acoustique. Elle concerne l'étude des interactions entre les ondes acoustiques et les variations de température. Dans cette thèse portant sur un réfrigérateur thermoacoustique, l'accent est mis sur l'impact de la convection naturelle sur la distribution de température complexe au sein de son noyau.
+La convection naturelle est un phénomène où des variations de densité causée par des différences de température provoquent un mouvement de fluide et un transfert de chaleur. Ceux-ci peuvent influer sur les performances de la machine et  perturber la distribution de température déjà complexe dans un noyau thermoacoustique.
 
-En effet, la convection naturelle est un phénomène où un transfert de chaleur et un mouvement de fluide est provoqué par des variations de densité causée par des différences de température. Cet écoulement et ces transferts thermiques peuvent influer sur les performances de la machine et  perturber la distribution de température déjà complexe dans un noyau thermoacoustique.
+L'objectif principal de cette thèse expérimentale est d'analyser et de quantifier l'effet de la convection naturelle sur cette distribution de température. Une approche combinant expérimentations et simulations numériques est adoptée pour étudier les mécanismes sous-jacents régissant les transferts thermiques dans le noyau, en tournant la pompe à chaleur et son noyau dans diverses orientations d'intérêt. Un modèle théorique temporel du régime transitoire est également développé pour prédire le comportement du système et ainsi améliorer la compréhension de la machine. Il est démontré que \echaf{ajouter les conclusions}.
 
-L'objectif principal de cette thèse expérimentale est d'analyser et de quantifier l'effet de la convection naturelle sur cette distribution de température. Une approche combinant simulations numériques et expérimentations est adoptée pour étudier les mécanismes sous-jacents régissant les transferts thermiques dans le noyau, en tournant le réfrigérateur et son noyau dans diverses orientations d'intérêt. Un modèle théorique temporel du régime transitoire est également développé pour prédire le comportement du système et ainsi améliorer la compréhension de la machine. Il est démontré que \echaf{ajouter les conclusions}.
-
-Un espace dans la littérature portant sur la thermoacoustique est ainsi comblé par cette étude de l'impact de la convection naturelle sur la distribution de température dans le noyau du réfrigérateur thermoacoustique.
-
+Un espace dans la littérature portant sur la thermoacoustique est ainsi comblé par les résultats de cette étude de l'impact de la convection naturelle sur la distribution de température dans le noyau de la pompe à chaleur thermoacoustique.
+\end{multicols}
 \bigskip
 
 {\large \textit{Mots clés :}} thermoacoustique,  distribution de température, convection naturelle, conduction thermique, étude expérimentale, simulations numériques, modèles théoriques.
@@ -20,9 +20,15 @@ Un espace dans la littérature portant sur la thermoacoustique est ainsi comblé
 \vfill
 
 {\Large Abstract:}\medskip
+\begin{multicols}{2}
+Thermoacoustics is an interdisciplinary domain, at the interface between heat transfers, fluid mechanics and acoustics, and constists in the interaction between acoustic waves and temperature variations. This work is focused on a thermoacoustic heat pump, and especially on the impact of natural convection on the complex temperature distribution in its core.
 
-en Anglais
+Natural convection is a phenomenon where density variations caused by temperature differences set a fluid in motion and transfer heat. Those can influence the devices' perfomances and disturb the already complex temperature distributions in a thermoacoustic core.
 
+The main goal of this experimental PhD work is to analyse and quantify the effect of natural convection on that temperature distribution. Experimental studies and numerical simulations are combined to study the heat transfer mecanisms at play in the core, by rotating the heat pump and its core in all sorts of interesting orientations. A time domain, analytical simulation of the transient regime is also developed in order to predict the behaviour of the system and thus, enhance the understanding of the machine. It is proven that \echaf{what now}
+
+A space in literature about thermoacoustics is filled with the results of this study of the impact of natural convection on the temperature distribution in the core of a thermoacoustic heat pump.
+\end{multicols}
 \bigskip
 
 {\large \textit{Keywords:}} thermoacoustics, heat-driven/natural convection, temperature distribution
