--- a/tex/Introduction.tex
+++ b/tex/Introduction.tex
@@ -20,7 +20,7 @@
     \item Electroac générale : \cite{rossi_electroacoustique_1986, novak_measurement_2019}
     \item Pertes latérales : \cite{penelet_etude_2004, guedra_etudes_2012}
     \item Non uniformité de température sur la section : \cite{penelet_etude_2004}
-    \item Conduction dans les stack et meshgrids : \cite{hsu_effective_1996, li_effective_2006}
+    \item Conduction dans les stack et meshgrids : \cite{hsu_effective_1996, li_effective_2006, g_correlations_2022}
 \end{itemize}
 
 \section{Contexte du travail}
